2002-11-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (__compare_binding):
	(MatchBindingExactly):
	compoile fixes w/o stroke lib

2002-11-14  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	* INSTALL.fvwm:
	* NEWS
	Removed any reference on "xft and flickering"

2002-11-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/eventmask.h (XEVMASK_ICONW):
	* fvwm/events.c (HandleKeyRelease):
	(HandleKeyPress):
	(__handle_key_event):
	* fvwm/bindings.c (ParseBinding):
	(activate_binding):
	* libs/Bindings.h (enum):
	implemented key release bindings; prefix the key name with a '-';
	does not work well with some applications

2002-11-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.h:
	new file

	* fvwm/bindings.c (ParseBinding):
	(binding_cmd):
	(activate_binding):
	(bind_get_bound_button_contexts):
	(ParseBinding):
	(CMD_Stroke):
	(CMD_Mouse):
	(CMD_PointerKey):
	(CMD_Key):
	(RemoveMatchingBinding):
	(AddBinding):
	(AreBindingsEqual):
	(GrabWindowKey):
	(GrabWindowButton):
	(GrabAllWindowKeysAndButtons):
	* fvwm/module_interface.c (CMD_ModuleSynchronous):
	* fvwm/events.c (__handle_bpress_on_root):
	(__handle_bpress_on_managed):
	(HandleButtonRelease):
	* fvwm/builtins.c (CMD_Wait):
	(CMD_StrokeFunc):
	* libs/fvwmlib.h (enum):
	fixed Key vs. PointerKey with "A"ny context

2002-11-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (Iconify):
	icon placement safety patch
	(CreateIconWindow):
	fixed initial position of application provided icon windows

	* fvwm/session.c (LoadWindowStates):
	fixed parsing of strings beginning with whitespace in session file

	* fvwm/fvwm.1.in (Note):
	* fvwm/style.c (style_set_old_focus_policy):
	* libs/defaults.h (DEF_FP_MODIFIERS):
	set default modifiers for raising/focusing to N again

2002-11-11  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	* fvwm/fvwm.c (main):
	(usage):
	named-palette -> visual-palette, -N -> -P

2002-11-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/ConfigFvwmDefaults: