@@ -1,3 +1,8 @@
+2002-11-15  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmForm/FvwmForm.c (ParseActiveMessage):
+	Fixed colorset update
+
 2002-11-14  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmTheme/FvwmTheme.1:
